--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
-        NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAu3FufIp6vf-nX_HazzyEFQfvh-qJRSbE"
-        NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="workrecs.firebaseapp.com"
-        NEXT_PUBLIC_FIREBASE_PROJECT_ID="workrecs"
-        NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="workrecs.firebasestorage.app"
-        NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="35710390875"
-        NEXT_PUBLIC_FIREBASE_APP_ID="1:35710390875:web:76847916bf6be41234657e"
-        NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-CWXE7NNSN5"
-        NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Ldh71grAAAAAJOhM4SxpYEDQhsnY-CDCHSQQq5U"
-        RECAPTCHA_SECRET_KEY="6Ldh71grAAAAAGLFt9zgKb0r5JaOn_86IghWszv9"
-        GEMINI_API_KEY="AIzaSyCJKsmeL-e8otR1rVD1Zf5hs86zxPGADtM"
+        NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyA1zf-kCFrx7GnhgdeTuMibt1Ouv-OIN7Q"
+        NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="feedbacks-54905.firebaseapp.com"
+        NEXT_PUBLIC_FIREBASE_PROJECT_ID="feedbacks-54905"
+        NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="feedbacks-54905.firebasestorage.app"
+        NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="1031066748826"
+        NEXT_PUBLIC_FIREBASE_APP_ID="1:1031066748826:web:c9b042b678755eb5db9c23"
+        NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-1MQRC3HF9V"
+        NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Le4kCYsAAAAALzAWTpOA9STwrleGWPatdj9B1ZD"
+        RECAPTCHA_SECRET_KEY="6Le4kCYsAAAAAEuMowElpv3nEE8V_3ewDpW2DbeA"
+        GEMINI_API_KEY="AIzaSyCLFJ2KbiviiPInCYxGNXCvkxoJu1vLJ5s"
