Changes to be committed: 	new file:   .env.local.example 	new file:   EMULATOR_SETUP.md 	modified:   firebase.json 	modified:   package.json 	modified:   src/components/layout/Navbar.tsx

--- a/firebase.json
+++ b/firebase.json
@@ -10,5 +10,23 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  },
+  "emulators": {
+    "auth": {
+      "host": "localhost",
+      "port": 9099
+    },
+    "firestore": {
+      "host": "localhost",
+      "port": 8080
+    },
+    "ui": {
+      "enabled": true,
+      "host": "localhost",
+      "port": 4000
+    },
+    "logging": {
+      "level": "debug"
+    }
   }
 }
