--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:emulator": "NEXT_PUBLIC_USE_EMULATOR=true next dev --turbopack",
+    "emulator": "firebase emulators:start",
+    "emulator:import": "firebase emulators:start --import ./firestore-data",
+    "emulator:export": "firebase emulators:export ./firestore-data",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
